# TG_arr

./: .dockerignore  .env.example  .gitignore  BUGFIX_REPORT.md  BUGS_AND_FIXES.md  Dockerfile  IMPROVEMENTS.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
analysis/: 01-security.md  02-bugs.md  03-dead-code.md  04-dependencies.md  05-logic-issues.md  06-performance.md  06-summary.md  07-fix-plan.md  07-observability.md  08-testing-quality.md  09-deployment.md  10-database.md  11-summary.md  12-fix-plan.md  13-improvement-proposals.md
analysis/r4/: 01-security.md  02-bugs.md  03-dead-code.md  05-logic-issues.md  06-performance.md  07-observability.md  08-testing-quality.md  09-deployment.md  10-database.md  11-summary.md  12-fix-plan.md  13-improvement-proposals.md
analysis/r5/: 01-security.md  02-bugs.md  03-dead-code.md  04-dependencies.md  05-logic-issues.md  06-performance.md  07-observability.md  08-testing-quality.md  09-deployment.md  10-database.md  11-summary.md  12-fix-plan.md
analysis/r5/worktree-patches/: wf-1.patch  wf-2.patch  wf-3.patch  wf-4.patch  wf-5.patch  wf-6.patch  wf-7.patch  wf-8.patch
bot/: __init__.py  config.py  constants.py  db.py  main.py  models.py  webhook.py
bot/clients/: __init__.py  base.py  deezer.py  emby.py  lidarr.py  prowlarr.py  qbittorrent.py  radarr.py  registry.py  sonarr.py  tmdb.py
bot/handlers/: __init__.py  _cache.py  calendar.py  common.py  downloads.py  emby.py  history.py  music.py  search.py  settings.py  start.py  status.py  trending.py  users.py
bot/handlers/search/: __init__.py  commands.py  grab.py  results.py  services.py
bot/middleware/: __init__.py  auth.py
bot/services/: __init__.py  add_service.py  calendar_notification_service.py  notification_service.py  scoring.py  search_service.py
bot/ui/: __init__.py  callbacks.py  formatters.py  keyboards.py  menu.py
bot/ui/formatters/: __init__.py  _common.py  calendar.py  emby.py  search.py  torrent.py
bot/ui/keyboards/: __init__.py  _constants.py  calendar.py  emby.py  menu.py  music.py  search.py  settings.py  torrent.py  trending.py
docs/: FEATURE_QBITTORRENT.md  QUALITY_REPORT.md
docs/superpowers/plans/: 2026-07-22-media-language-policy.md
tests/: __init__.py  conftest.py  test_add_service.py  test_audit_r4_fixes.py  test_audit_r4_phase2.py  test_auth_middleware_r5.py  test_clients.py  test_config_validation.py  test_db.py  test_detect_content_type.py  test_feat_callbackdata.py  test_feat_emby_dedup.py  test_feat_external_links.py  test_feat_health.py  test_feat_season_presets.py  test_feat_users.py  test_feat_webhook.py  test_formatters.py  test_handlers_common.py  test_handlers_downloads.py  test_handlers_music_trending.py  test_handlers_status_emby.py  test_lidarr.py  test_logging_setup.py  test_notification_lifecycle.py  test_parsing.py  test_qbittorrent.py  test_r4_C1-deploy-docs.py  test_r4_C2-qbit.py  test_r4_C3-dead-clients.py  test_r4_C4-services.py  test_r4_C5-handler-perf.py  test_r4_C6-db-notify.py  test_r4_C7-search-models.py  test_r4_C8-coverage.py  test_r4_race04.py  test_r5_callbackdata_migration.py  test_scoring.py  test_search_grab_flow.py  test_services.py  (+3 more)
