[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-arr"
version = "1.0.0"
description = "Telegram bot for Prowlarr/Radarr/Sonarr integration"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "TG_arr Team"}
]
dependencies = [
    "aiogram>=3.20,<4",
    "httpx>=0.28,<1",
    "tenacity>=9.0,<10",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "aiosqlite>=0.20,<2",
    "structlog>=24.4,<26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools.packages.find]
where = ["."]
include = ["bot*"]
