[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-arr"
version = "1.0.0"
description = "Telegram bot for Prowlarr/Radarr/Sonarr integration"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "TG_arr Team"}
]
dependencies = [
    "aiogram>=3.20,<4",
    "httpx>=0.28,<1",
    "tenacity>=9.0,<10",
    # DEP-09: aiogram 3.27 requires pydantic<2.13. Cap so `pip install -e .`
    # without requirements.txt cannot accidentally pull a breaking version.
    "pydantic>=2.9,<2.13",
    "pydantic-settings>=2.6,<3",
    "aiosqlite>=0.20,<2",
    "structlog>=24.4,<26",
]

# DEP-04: keep these floors in sync with the exact pins in
# requirements-dev.txt so `pip install -e ".[dev]"` and
# `pip install -r requirements-dev.txt` resolve to the same toolchain.
[project.optional-dependencies]
dev = [
    "pytest>=9.0,<10",
    "pytest-asyncio>=1.3,<2",
    "pytest-cov>=7.1,<8",
    "ruff>=0.14,<1",
    "mypy>=1.18,<2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools.packages.find]
where = ["."]
include = ["bot*"]
