[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-arr"
version = "1.0.0"
description = "Telegram bot for Prowlarr/Radarr/Sonarr integration"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "TG_arr Team"}
]
dependencies = [
    "aiogram>=3.20,<4",
    "httpx>=0.28,<1",
    "tenacity>=9.0,<10",
    # DEP-01: explicit floor for the webhook server transport (bot/webhook.py),
    # otherwise unreproducibly pulled in transitively via aiogram.
    "aiohttp>=3.9,<4",
    # DEP-05: aiogram 3.29.1 relaxed its cap to pydantic<2.14. Keep our own cap
    # one minor ahead of the current pin so `pip install -e .` without
    # requirements.txt cannot pull a not-yet-vetted 2.14.
    "pydantic>=2.9,<2.14",
    "pydantic-settings>=2.6,<3",
    "aiosqlite>=0.20,<2",
    "structlog>=24.4,<27",
]

# DEP-04: keep these floors in sync with the exact pins in
# requirements-dev.txt so `pip install -e ".[dev]"` and
# `pip install -r requirements-dev.txt` resolve to the same toolchain.
[project.optional-dependencies]
dev = [
    "pytest>=9.0,<10",
    "pytest-asyncio>=1.3,<2",
    "pytest-cov>=7.1,<8",
    "ruff>=0.14,<1",
    "mypy>=1.18,<2",
    "pyyaml>=6,<7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools.packages.find]
where = ["."]
include = ["bot*"]

# DEP-04: pin ruff's config explicitly instead of relying on version-drifting
# defaults (target-version/line-length/rule-set). `select` below fixes the
# current effective defaults (E4/E7/E9/F) so `pip install -e ".[dev]"` (which
# can resolve a newer ruff within the `>=0.14,<1` range) can't silently change
# what gets linted. Widening the rule-set is a deliberate follow-up, not this
# fix.
[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

# DEP-03: mypy is declared as a dev dependency but was never configured or
# wired into a make target (see `make typecheck` in Makefile). Config kept
# minimal — bot/ isn't owned by this cluster, so no strict-mode ratchet here.
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
no_strict_optional = true
